fix code in baitap

--- a/baitap/tao_form_survay_khach_hang.html
+++ b/baitap/tao_form_survay_khach_hang.html
@@ -57,7 +57,7 @@
             <table>
                 <tr>
                     <td>
-                        <label for="r1">$<input id="r1" type="text"></label><br>Dollars
+                        <label for="dollars">$<input id="dollars" type="text"></label><br>Dollars
                     </td>
                     <td>
                         <p>. <input type="text"><br>Cents</p>
